--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,7 @@
 
 	<platform name="android">
 		
-		<dependency id="com.google.playservices"/>
+        <framework src="com.google.android.gms:play-services-location:+" />
 		
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="ActivityRecognitionPlugin">
@@ -20,12 +20,24 @@
 			</feature>
 		</config-file>
 		
+		 <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <service android:name="com.flybuy.cordova.location.BackgroundLocationUpdateService" android:enabled="true"/>
+        </config-file>
+
+		
 		<config-file parent="/manifest/application" target="AndroidManifest.xml">
+			            <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
 			<service android:name="cordova.plugin.activity.recognition.ActivityRecognitionIntentService"  />
 		</config-file>
 		
 		<config-file parent="/manifest" target="AndroidManifest.xml">
-			<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+			   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+            <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+            <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
+            <uses-permission android:name="android.permission.INTERNET"/>
+            <uses-permission android:name="android.permission.WAKE_LOCK"/>
 		</config-file>
 		
 		<source-file src="src/android/ActivityRecognitionPlugin.java" target-dir="src/cordova-plugin-activity-recognition/ActivityRecognition" />
